--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,5 @@
 <div class="has-text-centered">
-    <a href="{{ site.baseurl }}/feed.xml" class="button is-primary">
+    <a href="{{ https://docs.google.com/forms/d/e/1FAIpQLSfMzeXws57nA9Fib-6Agv0xCgnUmkEOt5mL0jiWNIJGq7FnVw/viewform }}/feed.xml" class="button is-primary">
         <span class="icon"><i class="fas fa-rss"></i></span>
         <span>Subscribe</span>
     </a>
